hphp/hack/test/typecheck/parent_override_trait1.php.exp
ERROR: File "parent_override_trait1.php", line 20, characters 7-7:
Constant FOO1 is defined concretely in multiple ancestors (Typing[4374])
  File "parent_override_trait1.php", line 4, characters 9-12:
  One conflicting definition is here, inherited through T1
  File "parent_override_trait1.php", line 10, characters 9-12:
  Another conflicting definition is here, inherited through B
ERROR: File "parent_override_trait1.php", line 20, characters 17-17:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "parent_override_trait1.php", line 4, characters 9-12:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "parent_override_trait1.php", line 10, characters 9-12:
  `FOO1` inherited from `I2`
  File "parent_override_trait1.php", line 4, characters 9-12:
  conflicts with constant `FOO1` inherited from `I1`.
